--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "dotenv": "^8.2.0",
     "nodemon": "^2.0.4"
   },
-  "author": "Raphael Terrier @R4ph-t",
+  "author": "",
   "license": "MIT",
   "private": true,
   "engines": {
